feature: trained with vgg network, saved output of last convolutional layer to disk.  Reads codes back from disk so we don't have to rerun images through vgg.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -551,7 +551,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(917, 17)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -704,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -776,14 +796,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VGG16 Parameters: 553MB [00:14, 39.0MB/s]                              \n"
+      "Parameter file already exists!\n"
      ]
     }
    ],
@@ -822,123 +842,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from tensorflow_vgg import vgg16\n",
-    "from tensorflow_vgg import utils"
+    "from tensorflow_vgg import utils\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "started around 6:15pm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/edwardshyu/tensorflow_vgg/vgg16.npy\n",
+      "/home/edwardshyu/capstone/tensorflow_vgg/vgg16.npy\n",
       "npy file loaded\n",
       "build model started\n",
       "build model finished: 0s\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  1  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  2  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n",
-      "batch  3  batch shape  (5, 224, 224, 3)\n"
+      "batch  1  image count  10  elapsed time 0.13 m\n",
+      "batch  2  image count  20  elapsed time 0.22 m\n",
+      "batch  3  image count  30  elapsed time 0.32 m\n",
+      "batch  4  image count  40  elapsed time 0.41 m\n",
+      "batch  5  image count  50  elapsed time 0.51 m\n",
+      "batch  6  image count  60  elapsed time 0.60 m\n",
+      "batch  7  image count  70  elapsed time 0.70 m\n",
+      "batch  8  image count  80  elapsed time 0.80 m\n",
+      "batch  9  image count  90  elapsed time 0.89 m\n",
+      "batch  10  image count  100  elapsed time 0.99 m\n",
+      "batch  11  image count  110  elapsed time 1.09 m\n",
+      "batch  12  image count  120  elapsed time 1.19 m\n",
+      "batch  13  image count  130  elapsed time 1.28 m\n",
+      "batch  14  image count  140  elapsed time 1.38 m\n",
+      "batch  15  image count  150  elapsed time 1.48 m\n",
+      "batch  16  image count  160  elapsed time 1.58 m\n",
+      "batch  17  image count  170  elapsed time 1.68 m\n",
+      "batch  18  image count  180  elapsed time 1.79 m\n",
+      "batch  19  image count  190  elapsed time 1.89 m\n",
+      "batch  20  image count  200  elapsed time 1.99 m\n",
+      "batch  21  image count  210  elapsed time 2.09 m\n",
+      "batch  22  image count  220  elapsed time 2.19 m\n",
+      "batch  23  image count  230  elapsed time 2.30 m\n",
+      "batch  24  image count  240  elapsed time 2.40 m\n",
+      "batch  25  image count  250  elapsed time 2.50 m\n",
+      "batch  26  image count  260  elapsed time 2.60 m\n",
+      "batch  27  image count  270  elapsed time 2.71 m\n",
+      "batch  28  image count  280  elapsed time 2.81 m\n",
+      "batch  29  image count  290  elapsed time 2.92 m\n",
+      "batch  30  image count  300  elapsed time 3.02 m\n",
+      "batch  31  image count  310  elapsed time 3.13 m\n",
+      "batch  32  image count  320  elapsed time 3.24 m\n",
+      "batch  33  image count  330  elapsed time 3.34 m\n",
+      "batch  34  image count  340  elapsed time 3.45 m\n",
+      "batch  35  image count  350  elapsed time 3.56 m\n",
+      "batch  36  image count  360  elapsed time 3.66 m\n",
+      "batch  37  image count  370  elapsed time 3.77 m\n",
+      "batch  38  image count  380  elapsed time 3.89 m\n",
+      "batch  39  image count  390  elapsed time 4.00 m\n",
+      "batch  40  image count  400  elapsed time 4.11 m\n",
+      "batch  41  image count  410  elapsed time 4.22 m\n",
+      "batch  42  image count  420  elapsed time 4.34 m\n",
+      "batch  43  image count  430  elapsed time 4.45 m\n",
+      "batch  44  image count  440  elapsed time 4.56 m\n",
+      "batch  45  image count  450  elapsed time 4.67 m\n",
+      "batch  46  image count  460  elapsed time 4.79 m\n",
+      "batch  47  image count  470  elapsed time 4.90 m\n",
+      "batch  48  image count  480  elapsed time 5.02 m\n",
+      "batch  49  image count  490  elapsed time 5.13 m\n",
+      "batch  50  image count  500  elapsed time 5.24 m\n",
+      "batch  51  image count  510  elapsed time 5.35 m\n",
+      "batch  52  image count  520  elapsed time 5.47 m\n",
+      "batch  53  image count  530  elapsed time 5.58 m\n",
+      "batch  54  image count  540  elapsed time 5.69 m\n",
+      "batch  55  image count  550  elapsed time 5.81 m\n",
+      "batch  56  image count  560  elapsed time 5.92 m\n",
+      "batch  57  image count  570  elapsed time 6.04 m\n",
+      "batch  58  image count  580  elapsed time 6.22 m\n",
+      "batch  59  image count  590  elapsed time 6.41 m\n",
+      "batch  60  image count  600  elapsed time 6.60 m\n",
+      "batch  61  image count  610  elapsed time 6.80 m\n",
+      "batch  62  image count  620  elapsed time 6.99 m\n",
+      "batch  63  image count  630  elapsed time 7.18 m\n",
+      "batch  64  image count  640  elapsed time 7.37 m\n",
+      "batch  65  image count  650  elapsed time 7.56 m\n",
+      "batch  66  image count  660  elapsed time 7.76 m\n",
+      "batch  67  image count  670  elapsed time 7.96 m\n",
+      "batch  68  image count  680  elapsed time 8.14 m\n",
+      "batch  69  image count  690  elapsed time 8.34 m\n",
+      "batch  70  image count  700  elapsed time 8.54 m\n",
+      "batch  71  image count  710  elapsed time 8.73 m\n",
+      "batch  72  image count  720  elapsed time 8.92 m\n",
+      "batch  73  image count  730  elapsed time 9.12 m\n",
+      "batch  74  image count  740  elapsed time 9.32 m\n",
+      "batch  75  image count  750  elapsed time 9.53 m\n",
+      "batch  76  image count  760  elapsed time 9.72 m\n",
+      "batch  77  image count  770  elapsed time 9.91 m\n",
+      "batch  78  image count  780  elapsed time 10.11 m\n",
+      "batch  79  image count  790  elapsed time 10.30 m\n",
+      "batch  80  image count  800  elapsed time 10.50 m\n",
+      "batch  81  image count  810  elapsed time 10.70 m\n",
+      "batch  82  image count  820  elapsed time 10.91 m\n",
+      "batch  83  image count  830  elapsed time 11.11 m\n",
+      "batch  84  image count  840  elapsed time 11.32 m\n",
+      "batch  85  image count  850  elapsed time 11.52 m\n",
+      "batch  86  image count  860  elapsed time 11.72 m\n",
+      "batch  87  image count  870  elapsed time 11.92 m\n",
+      "batch  88  image count  880  elapsed time 12.13 m\n",
+      "batch  89  image count  890  elapsed time 12.33 m\n",
+      "batch  90  image count  900  elapsed time 12.55 m\n",
+      "batch  91  image count  910  elapsed time 12.75 m\n",
+      "batch  92  image count  917  elapsed time 12.93 m\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 100\n",
+    "batch_size = 10\n",
     "angles=16\n",
     "codes_by_angle = [None] * angles #each element represents a specific angle (0 to 15), and is of size batch x h x w x depth (5th convolutional layer)\n",
     "labels = []\n",
     "batch = []\n",
     "batch_i = 0\n",
+    "n_img = 0\n",
     "tf.reset_default_graph()\n",
+    "start_time = time.time()\n",
     "with tf.Session() as sess:\n",
     "    vgg = vgg16.Vgg16()\n",
     "    input_ = tf.placeholder(tf.float32, [None, 224, 224, 3])\n",
     "    with tf.name_scope(\"content_vgg\"):\n",
     "        vgg.build(input_)           \n",
     "        for x_batch, y_batch in yield_batch(image_paths_train, y_train, batch_size):\n",
-    "            batch_i +=1\n",
-    "            print(\"batch \", batch_i)\n",
+    "            \n",
+    "            \n",
+    "\n",
     "            for angle in range(angles):\n",
     "                #grab one angle for all batches, convert 1 channel to 3 channel images\n",
     "                angle_batch_3c = angle_1c_to_3c(x_batch,angle=angle,height=VGG_HEIGHT,width=VGG_WIDTH)\n",
     "                \n",
+    "                #conv5_3 layer is of size (batch, 14, 14, 512); pool5 i of size (batch, 7, 7, 512)\n",
     "                feed_dict = {input_: angle_batch_3c}\n",
-    "                codes_batch = sess.run(vgg.pool5, feed_dict=feed_dict)\n",
+    "                codes_batch = sess.run(vgg.conv5_3, feed_dict=feed_dict)\n",
     "\n",
     "                if codes_by_angle[angle] is None:\n",
     "                    codes_by_angle[angle] = codes_batch\n",
     "                else:\n",
-    "                    codes_by_angle[angle] = np.concatenate((codes_by_angle[angle], codes_batch))            "
+    "                    codes_by_angle[angle] = np.concatenate((codes_by_angle[angle], codes_batch))\n",
+    "                    \n",
+    "            batch_i +=1\n",
+    "            n_img += x_batch.shape[0]     \n",
+    "            print(\"batch \", batch_i, \" image count \", n_img, \" elapsed time {:.2f} m\".format((time.time() - start_time)/60))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#convert list into np array\n",
+    "#angles x records x height x width x channel depth\n",
+    "n_batch,height,width,channel = codes_by_angle[0].shape\n",
     "codes_by_angle_arr = codes_by_angle[0].reshape(1,n_batch,height,width,channel)\n",
     "for angle in range(1,angles):\n",
     "    codes_by_angle_arr = np.concatenate([codes_by_angle_arr, codes_by_angle[angle].reshape(1,n_batch,height,width,channel)])"
@@ -946,46 +1023,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16, 15, 7, 7, 512)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "codes_by_angle_arr.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# write codes to file\n",
-    "with open('codes', 'w') as f:\n",
-    "    codes_by_angle_arr.tofile(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('targets', 'w') as f:\n",
+    "# write codes to file\n",
+    "with open('codes_train', 'w') as f:\n",
+    "    codes_by_angle_arr.tofile(f)\n",
+    "    \n",
+    "with open('targets_train', 'w') as f:\n",
     "    y_train.tofile(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## load output of pretrained network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#angles x records x height x width x channel depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('codes_train') as f:\n",
+    "    codes_raw = np.fromfile(f, dtype=np.float32)\n",
+    "    \n",
+    "with open('targets_train')  as f:\n",
+    "    y_train_raw = np.fromfile(f, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "codes_arr = codes_raw.reshape([16,917,14,14,512])\n",
+    "codes_arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(917, 17)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_arr = y_train_raw.reshape([917, 17])\n",
+    "y_train_arr.shape"
    ]
   },
   {
