feat: build network, define training and loss tracking.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,16 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Python 2.7.13\n",
-      "TensorFlow Version: 1.2.1\n",
-      "Default GPU Device: /gpu:0\n"
+      "TensorFlow Version: 1.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edude/anaconda/envs/py2/lib/python2.7/site-packages/ipykernel/__main__.py:16: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
      ]
     }
    ],
@@ -652,7 +660,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -672,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -692,7 +704,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -784,7 +798,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -887,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1079,17 +1097,19 @@
     "with open('codes') as f:\n",
     "    codes = np.fromfile(f, dtype=np.float32)\n",
     "    \n",
-    "with open('targets') as f:\n",
-    "    targets = np.fromfile(f, dtype=np.float32)\n",
+    "with open('target') as f:\n",
+    "    target = np.fromfile(f, dtype=np.float32)\n",
     "    \n",
     "codes = codes.reshape([n_obs,angles,height,width,depth])\n",
-    "targets = targets.reshape([n_obs, regions])"
+    "target = target.reshape([n_obs, regions])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1105,7 +1125,7 @@
     "codes dimensions are: batch x angles x height x width, x depth\n",
     "\"\"\"\n",
     "print(\"codes shape\", codes.shape)\n",
-    "print(\"targets shape\", targets.shape)"
+    "print(\"target shape\", target.shape)"
    ]
   },
   {
@@ -1125,8 +1145,8 @@
    "source": [
     "#split into training and validation data\n",
     "x_train, x_test, y_train, y_test, i_train, i_test = train_test_split(codes,\n",
-    "                                                                     targets,\n",
-    "                                                                     range(targets.shape[0]),\n",
+    "                                                                     target,\n",
+    "                                                                     range(target.shape[0]),\n",
     "                                                                     test_size=0.20,\n",
     "                                                                     random_state=0)\n",
     "\n",
@@ -1155,26 +1175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_inputs(codes_shape, targets_shape):\n",
+    "def get_inputs(codes_shape, target_shape):\n",
     "    inputs_ = tf.placeholder(tf.float32,\n",
     "                             shape=[None, codes_shape[1], codes_shape[2], codes_shape[3], codes_shape[4]],\n",
     "                             name=\"inputs\")\n",
-    "    targets_ = tf.placeholder(tf.float32,\n",
-    "                              shape=[None, targets_shape[1]],\n",
-    "                              name=\"targets\")\n",
+    "    target_ = tf.placeholder(tf.float32,\n",
+    "                              shape=[None, target_shape[1]],\n",
+    "                              name=\"target\")\n",
     "    \n",
-    "    return inputs_, targets_"
+    "    keep_prob_ = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "    \n",
+    "    is_training_ = tf.placeholder(tf.bool, name=\"is_training\")\n",
+    "    \n",
+    "    return inputs_, target_, keep_prob_, is_training_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1215,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1232,7 +1256,7 @@
     "    # transpose views : (NxVxWxHxC) -> (VxNxWxHxC)\n",
     "    views = tf.transpose(views, perm=[1, 0, 2, 3, 4])\n",
     "    \n",
-    "    view_pool = []\n",
+    "    view_features = []\n",
     "\n",
     "    for i in xrange(n_views):\n",
     "        reuse = (i != 0) #reuse is False for the 0th angle, and true for all remaining angles\n",
@@ -1258,18 +1282,20 @@
     "        '''\n",
     "        dim = np.prod(drop7.get_shape().as_list()[1:])\n",
     "        reshape = tf.reshape(relu7, [-1, dim])\n",
-    "        view_pool.append(reshape)\n",
+    "        view_features.append(reshape)\n",
     "        \n",
-    "    return view_pool"
+    "    return view_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def _view_pool(view_features, name='view_pool8'):\n",
+    "def view_pool(view_features, name='view_pool8'):\n",
     "    '''\n",
     "    Combines the list of view features using maximum, into one\n",
     "    \"view\" of the same dimensions as a single view.\n",
@@ -1285,25 +1311,25 @@
     "\n",
     "    gets the maximum for each index within the view\n",
     "    '''\n",
-    "    vp = tf.expand_dims(view_features[0], 0) # eg. [100] -> [1, 100]\n",
-    "    for v in view_features[1:]:\n",
-    "        v = tf.expand_dims(v, 0)\n",
-    "        vp = tf.concat([vp, v], 0)\n",
-    "    print('vp before reducing:', vp.get_shape().as_list())\n",
-    "    vp = tf.reduce_max(vp, [0], name=name)\n",
-    "    return vp"
+    "    view_pool_layer = tf.expand_dims(view_features[0], 0) # eg. [100] -> [1, 100]\n",
+    "    for view in view_features[1:]:\n",
+    "        view = tf.expand_dims(view, 0)\n",
+    "        view_pool_layer = tf.concat([view_pool_layer, view], 0)\n",
+    "    print('view_pool_layer before reducing:', view_pool_layer.get_shape().as_list())\n",
+    "    view_pool_layer = tf.reduce_max(view_pool_layer, [0], name=name)\n",
+    "    return view_pool_layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def dense(view_pooled, keep_prob=0.5, is_training=True, n_targets=17):\n",
-    "    dense9 = tf.layers.dense(view_pooled, units=4096, name='dense9')\n",
+    "def dense(view_pool_layer, keep_prob=0.5, is_training=True, n_target=17):\n",
+    "    dense9 = tf.layers.dense(view_pool_layer, units=4096, name='dense9')\n",
     "    bn9 = tf.layers.batch_normalization(dense9, training=is_training)\n",
     "    relu9 = leaky_relu(bn9)\n",
     "    drop9 = tf.nn.dropout(relu9, keep_prob=keep_prob)\n",
@@ -1317,7 +1343,7 @@
     "    Output should have 17 units, one for each body region\n",
     "    Use sigmoid so that each unit ranges from 0 to 1, independently of the other units\n",
     "    '''\n",
-    "    logits = tf.layers.dense(drop10, units=n_targets, name='logits')\n",
+    "    logits = tf.layers.dense(drop10, units=n_target, name='logits')\n",
     "    output = tf.sigmoid(logits)\n",
     "    \n",
     "    return output"
@@ -1325,24 +1351,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "loss funcction, use reduce_mean (mean squared error)\n",
+    "loss function, use reduce_mean (mean squared error)\n",
     "\"\"\"\n",
     "\n",
-    "def loss(output, targets):\n",
-    "    loss = tf.reduce_mean(tf.squared_difference(output, targets))\n",
+    "def loss(output, target):\n",
+    "    loss = tf.reduce_mean(tf.squared_difference(output, target))\n",
     "    return loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1358,31 +1384,188 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'codes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-91f65dfa236a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#inputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0minputs_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_training_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_inputs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mview_features_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiview_layers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mviews\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeep_prob_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_training\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mis_training_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'codes' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Build the network model\n",
+    "\"\"\"\n",
+    "LEARNING_RATE=0.01\n",
+    "BETA1=0.5\n",
+    "#reset graph\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "#inputs\n",
+    "\n",
+    "inputs_, target_, keep_prob_, is_training_ = get_inputs(codes.shape, target.shape)\n",
+    "\n",
+    "view_features_layer = multiview_layers(views=inputs_, keep_prob=keep_prob_, is_training=is_training_)\n",
+    "\n",
+    "view_pool_layer = view_pool(view_features=view_features, name='view_pool8')\n",
+    "\n",
+    "output = dense(view_pooled, keep_prob=keep_prob_, is_training=is_training_, n_target=17)\n",
+    "\n",
+    "loss = loss(output=output, target=target_)\n",
+    "\n",
+    "opt = optimizer(loss=loss, learning_rate=LEARNING_RATE, beta1=BETA1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "get batches\n",
+    "\n",
+    "\"\"\"\n",
+    "BATCH_SIZE = 64\n",
+    "def get_code_target_batch(x, y, batch_size=64):\n",
+    "    n_obs = target.shape[0]\n",
+    "    n_batches = target.shape[0]//batch_size\n",
+    "    for ii in range(0, n_obs, batch_size):\n",
+    "        x = x[ii:ii+batch_size]\n",
+    "        y = y[ii:ii+batch_size]\n",
+    "    yield x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Train network (for each batch)\n",
+    "\"\"\"\n",
+    "def train(session, opt, keep_prob, input_batch, target_batch):\n",
+    "    \"\"\"\n",
+    "    Optimize the session on a batch of images and labels\n",
+    "    : session: Current TensorFlow session\n",
+    "    : optimizer: TensorFlow optimizer function\n",
+    "    : keep_probability: keep probability\n",
+    "    : feature_batch: Batch of Numpy image data\n",
+    "    : label_batch: Batch of Numpy label data\n",
+    "    \"\"\"\n",
+    "    feed = {input_ : input_batch,\n",
+    "                       target_ : target_batch,\n",
+    "                       keep_prob_ : keep_prob,\n",
+    "                       is_training_ : True\n",
+    "                      }\n",
+    "    session.run(opt, feed_dict=feed)\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "track training and validation losses\n",
+    "\"\"\"\n",
+    "def print_stats(session, x_train_batch, y_train_batch, x_valid_batch, y_valid_batch, loss):\n",
+    "    \"\"\"\n",
+    "    Print information about loss and validation accuracy\n",
+    "    : session: Current TensorFlow session\n",
+    "    : feature_batch: Batch of Numpy image data\n",
+    "    : label_batch: Batch of Numpy label data\n",
+    "    : cost: TensorFlow cost function\n",
+    "    : accuracy: TensorFlow accuracy function\n",
+    "    \"\"\"\n",
+    "    # training loss\n",
+    "    train_loss_dict = {input_: x_train_batch, \n",
+    "                       target_: y_train_batch, \n",
+    "                       keep_prob_ : 1.,\n",
+    "                       is_training_ : False\n",
+    "                      }\n",
+    "    train_loss = session.run(loss, feed_dict=train_loss_dict)\n",
+    "\n",
+    "    #validation loss\n",
+    "    valid_loss_dict = {input_: x_valid_batch,\n",
+    "                       target_: y_valid_batch,\n",
+    "                       keep_prob_ : 1.,\n",
+    "                       is_training_ : False\n",
+    "                      }\n",
+    "    valid_loss = session.run(loss, feed_dict=valid_loss_dict)\n",
+    "        \n",
+    "    #end while loop\n",
+    "    print(\"train loss {:.4f}, validation loss {:.4f}\".format(train_loss, valid_loss))\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "hyper parameters\n",
+    "\"\"\"\n",
+    "epochs=1\n",
+    "BATCH_SIZE=64\n",
+    "keep_prob_ = 0.5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "iterate through batches and train\n",
+    "\"\"\"\n",
+    "\n",
+    "save_model_path = './saved_session'\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    for epoch in range(epochs):\n",
+    "        batch_i = 0\n",
+    "        for x_train_batch, y_train_batch in get_code_target_batch(x_train, y_train, batch_size=BATCH_SIZE):\n",
+    "            batch_i +=1\n",
+    "            train(session=sess, opt=opt, keep_prob=keep_prob_, input_batch=x_train_batch, target_batch=y_train_batch_)\n",
+    "            print('Epoch {:>2}, batch {}:  '.format(epoch + 1, batch_i), end='')\n",
+    "            print_stats(session=sess, x_train_batch=x_train_batch, y_train_batch=y_train_batch, x_valid=x_valid, y_valid=y_valid, loss=loss)\n",
+    "    saver = tf.train.Saver()\n",
+    "    save_path = saver.save(sess, save_model_path)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:py2]",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "name": "conda-env-py2-py"
   }
  },
  "nbformat": 4,
